<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view_mode"
        android:icon="@drawable/ic_view_grid"
        android:title="@string/toggle_view"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_patches"
        android:icon="@drawable/ic_tune"
        android:title="@string/action_patches"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/refresh_folder"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>
